hard-gists/1239373/run.log
=== Docker Run Log for 1239373 ===
Started at: Mi 29. Okt 12:01:33 CET 2025

[2025-10-29 12:01:33] START: Running container for 1239373
[2025-10-29 12:01:33] SUCCESS: Container 165fe3241381da4795292b0d496bd30d9324118421c2ca59b08673f5064d5330 started for 1239373
=== Container logs for 1239373 ===
  File "/snippet.py", line 157
    except UnicodeDecodeError, e:
           ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1239373 ===
[2025-10-29 12:01:36] INFO: Container 165fe3241381da4795292b0d496bd30d9324118421c2ca59b08673f5064d5330 has stopped
